# mao_compiler

./: .gitignore  README.md  mao_interpreter.sln
Mao_Compiler/: CMakeLists.txt  Mao_Compiler.opensdf  Mao_Compiler.sdf  Mao_Compiler.sln  expression.c  expression.h  main.c  memory.c  parser.c  stack.c  utility.c
Mao_Compiler/Mao_Compiler/: Mao_Compiler.vcxproj  Mao_Compiler.vcxproj.filters  expression.c  expression.h  main.c  memory.c  memory.h  parser.c  parser.h  pharser.c  pharser.h  stack.c  stack.h  utility.c  utility.h  vector.c  vector.h
Mao_Interpreter/: CMakeLists.txt  expression.c  expression.h  main.c  mao_interpreter.vcxproj  mao_interpreter.vcxproj.filters  map.c  map.h  memory.c  memory.h  parser.c  parser.h
Requirement/: D1_out.txt  M1_out.txt  Requirements.docx  ~$quirements.docx
testcases/: D1.mao  M1.mao  M1_out.txt  S1.mao  S1_out.txt  S2.mao  S3.mao  S3_out.txt  generator.cpp  input1.txt  input2.txt  input3.txt  output1.txt  output2.txt  output3.txt
